# SimpleGamesTui

./: CMakeLists.txt  README.md  main.cpp
flowers/: game.cpp  game.h  main.cpp
nes/: controller.hpp  main.cpp
nes-agnes/: main.cpp
nes-knes/: NES.cpp  NES.h  main.cpp
snake/: bitmap.cpp  bitmap.h  board.cpp  board.h  game.cpp  game.h  main.cpp
